syntax = "proto3";

package plugin;

message SyntaxRequest {
  string code = 1;
  string language = 2;
}

message VersionRequest {}
message VersionResponse {
  string version = 1;
}

message SyntaxResponse {
  string output = 1;
}

message Request {
  oneof req {
    SyntaxRequest syntax_request = 1;
    VersionRequest version_request = 2;
  }
}

service PluginService {
  rpc Highlight (Request) returns (SyntaxResponse);
}